# FinancialCalculator

./: README.md  app.py  build.ps1  powershell.ps1  pyproject.toml  start.ps1  start.sh
exteran-docs/: docs.json  docs.yaml
ui/: bun.lockb  index.html  package-lock.json  package.json  vite.config.mjs
ui/src/: App.vue  main.js
ui/src/api/: config.ts
ui/src/components/: ApexChart.vue  ChartComponent.vue  ChartParametersForm.vue  SideBar.vue  TopBar.vue
ui/src/stores/: chartData.js  chartData.ts
